# uk4b

./: ,186360c7a5a.365484  .gitignore  .gitmodules  Makefile  README.md  beam.py  export_ukr_news_dataset.py  instruct.py  instruct_spell.py  instruct_tok.py  mlm.py  model.py  ner.py  prepare.py  prepare1.py  prepare_gec.py  pyproject.toml  requirements.txt  sample.py  score.py  sp_hash.py  train.py
data/gec-fluency/: valid.m2  valid.src.tok  valid.src.txt  valid.tgt.tok  valid.tgt.txt
data/gec-only/: align_fewshot.py  compile_fewshot.sh  fewshot.m2  fewshot.src.tok  fewshot.src.txt  fewshot.tgt.tok  fewshot.tgt.txt  valid.m2  valid.src.tok  valid.src.txt  valid.tgt.tok  valid.tgt.txt
data/ner/: convert2gpt2.py  test.gpt2.txt  train.gpt2.txt
data/udpos/: dev.inline.gpt2.txt  train.gpt2.txt
examples/: .gitignore  README.md  beam.py  lora.py  requirements.txt  wiki.model
examples/data/: polluted_validation_sentences.csv
examples/data/gec-fluency/: valid.src.txt
examples/data/gec-only/: align_fewshot.py  fewshot.m2  fewshot.src.tok  fewshot.src.txt  fewshot.tgt.tok  fewshot.tgt.txt  valid.m2
examples/data/ner/: .gitignore  convert2gpt2.py
examples/data/udpos/: dev.gpt2.txt  test.gpt2.txt  test.inline.gpt2.txt  train.inline.gpt2.txt
examples/exp/ppl/: BPC
examples/scripts/: evaluate_nll.py  evaluate_pos.py
lsh/: sp_hash.py
scripts/: evaluate.py  evaluate_ner.py  evaluate_nll.py
